--- a/passwordviewsample/src/main/res/layout/activity_main.xml
+++ b/passwordviewsample/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,17 +9,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.xwray.passwordviewsample.MainActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/password_til"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="16dp">
 
         <com.xwray.passwordview.PasswordView
             android:id="@+id/password"
@@ -29,6 +39,8 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/password_strike_til"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -41,5 +53,11 @@
             app:useStrikeThrough="true"
             />
     </android.support.design.widget.TextInputLayout>
+
+    <ImageButton
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_eye"/>
 
 </LinearLayout>
