--- a/passwordviewsample/src/main/res/layout/activity_main.xml
+++ b/passwordviewsample/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:elevation="4dp"
         />
 
